# ansible-role-victoriametrics_utils

./: README.md  pyproject.toml
.github/workflows/: ansible-test.yml  release-galaxy.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  requirements.yml
molecule/default/tests/: test_default.py  test_vmagent.py  test_vmauth.py
tasks/: config_vmagent.yml  config_vmauth.yml  download.yml  handler_service.yml  install.yml  install_bin.yml  main.yml  preflight.yml
templates/: vmagent.service.j2  vmagent.yml.j2
templates/vmagent/: config.yml.j2  vmagent.service.j2
templates/vmauth/: config.yml.j2  vmauth.service.j2  vmauth.yml.j2
vars/: main.yml
